--- a/portraits.qmd
+++ b/portraits.qmd
@@ -470,12 +470,12 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">as it is in the written source<br></span>
 <span class="verse-line">I want to tell you about her appearance<br></span>
 <span class="verse-line">before I go too far.<br></span>
-<span class="verse-line">In this world and in this reign,<br></span>
-<span class="verse-line"><span class="line-number">154</span>no man saw a more beautiful woman.<br></span>
-<span class="verse-line">Never duchess nor queen<br></span>
-<span class="verse-line">had on her head more beautiful hair.<br></span>
+<span class="verse-line">In this world or in this realm,<br></span>
+<span class="verse-line"><span class="line-number">154</span>no man ever saw a more beautiful woman.<br></span>
+<span class="verse-line">Never did a duchess or a queen<br></span>
+<span class="verse-line">have on her head more beautiful hair.<br></span>
 <span class="verse-line">She had round ears.<br></span>
-<span class="verse-line">What's more, they were marvelously white,<br></span>
+<span class="verse-line">Plus, they were marvelously white,<br></span>
 <span class="verse-line"><span class="line-number">159</span>her eyebrows black and becoming,<br></span>
 <span class="verse-line">and her eyes bright and smiling,<br></span>
 <span class="verse-line">her face tender and covered<br></span>
@@ -486,20 +486,20 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">and her look and her features bright.<br></span>
 <span class="verse-line">I believe on her nose and on her chin<br></span>
 <span class="verse-line">there was no defect at all.<br></span>
-<span class="verse-line"><span class="line-number">169</span>Above the bump on her chest,<br></span>
-<span class="verse-line">it was whiter than hawthorn flower,<br></span>
+<span class="verse-line"><span class="line-number">169</span>Above the bust of her chest,<br></span>
+<span class="verse-line">it was whiter than a hawthorn flower,<br></span>
 <span class="verse-line">and of course she had beautiful breasts,<br></span>
-<span class="verse-line">so well set, small, and beautiful.<br></span>
+<span class="verse-line">very well set, small, and beautiful.<br></span>
 <span class="verse-line">She had white arms and white hands,<br></span>
 <span class="verse-line"><span class="line-number">174</span>and her fingers slender, long, and smooth.<br></span>
 <span class="verse-line">She had a fine body and was well molded<br></span>
-<span class="verse-line">beneath her underarm and her rib.<br></span>
-<span class="verse-line">She was so courteous of speech.<br></span>
-<span class="verse-line">There was nothing to improve.<br></span>
+<span class="verse-line">beneath her underarm and her side.<br></span>
+<span class="verse-line">She was so courteous of speech;<br></span>
+<span class="verse-line">there was nothing to improve.<br></span>
 <span class="verse-line"><span class="line-number">179</span>She was neither too big nor too small.<br></span>
 <span class="verse-line">Her frame could never be described.<br></span>
 <span class="verse-line">The beauty of these proportions<br></span>
-<span class="verse-line">could neither be described nor appraised<br></span>
+<span class="verse-line">could neither be described nor appraised.<br></span>
 <span class="verse-line">Such a creature makes one lament<br></span>
 <span class="verse-line"><span class="line-number">184</span>when she does not care about her Creator.<br></span>
 <span class="verse-line">She received great presents<br></span>
@@ -511,24 +511,24 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">she wore a fine purple silk bliaut<br></span>
 <span class="verse-line">and adorned herself with an ermine mantle.<br></span>
 <span class="verse-line">Well-painted shoes of Cordovan leather<br></span>
-<span class="verse-line"><span class="line-number">194</span>she put these on all the days of the year.<br></span>
+<span class="verse-line"><span class="line-number">194</span>she wore all the days of the year.<br></span>
 <span class="verse-line">The citizens of the city<br></span>
 <span class="verse-line">loved her entirely for her beauty,<br></span>
 <span class="verse-line">and the old men and the wise<br></span>
 <span class="verse-line">would all say, "God, what a shame!<br></span>
-<span class="verse-line"><span class="line-number">199</span>Alas for this suffering!<br></span>
+<span class="verse-line"><span class="line-number">199</span>Alas for this sufferer!<br></span>
 <span class="verse-line">There is much to bemoan of her youth.<br></span>
-<span class="verse-line">Alas evermore for her life<br></span>
-<span class="verse-line">is so full of folly."<br></span>
+<span class="verse-line">Alas evermore for her life,<br></span>
+<span class="verse-line">which is so full of folly."<br></span>
 <span class="verse-line">As she answered all with reason<br></span>
 <span class="verse-line"><span class="line-number">204</span>and had such a beautiful frame,<br></span>
-<span class="verse-line">the son of an emperor<br></span>
+<span class="verse-line">that the son of an emperor<br></span>
 <span class="verse-line">could have taken her with honor.<br></span>
 .....<br>
-<span class="verse-line"><span class="line-number">567</span>So she roamed by night and by day<br></span>
+<span class="verse-line"><span class="line-number">567</span>She roamed so long by night and by day,<br></span>
 <span class="verse-line">hungry, thirsty, and on hard beds.<br></span>
-<span class="verse-line">Like that, there she was in the wood,<br></span>
-<span class="verse-line">and so, she became entirely wild.<br></span>
+<span class="verse-line">There she was in the wood so long<br></span>
+<span class="verse-line">that she became entirely wild.<br></span>
 <span class="verse-line">Soon, her clothes were worn out,<br></span>
 <span class="verse-line"><span class="line-number">572</span>and soon her soles were torn up.<br></span>
 <span class="verse-line">As much from winter as from summer,<br></span>
@@ -544,10 +544,10 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">and her chin was so black<br></span>
 <span class="verse-line">as if it were the head of a firebrand.<br></span>
 <span class="verse-line">Thinned were her eyes.<br></span>
-<span class="verse-line">There was not a shred of pride now.<br></span>
+<span class="verse-line">There was not a shred of pride there now.<br></span>
 <span class="verse-line"><span class="line-number">587</span>If you saw her ears,<br></span>
-<span class="verse-line">you would come upon a great marvel<br></span>
-<span class="verse-line">for they were so skinny and degraded<br></span>
+<span class="verse-line">you would find a great marvel<br></span>
+<span class="verse-line">for they were so skinny and deteriorated<br></span>
 <span class="verse-line">and all wooly with white hairs.<br></span>
 <span class="verse-line">Black and hairy was her chest.<br></span>
 <span class="verse-line"><span class="line-number">592</span>It seemed like black thorny bark.<br></span>
@@ -556,7 +556,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">She had large nails.<br></span>
 <span class="verse-line">She reshaped them with her teeth.<br></span>
 <span class="verse-line"><span class="line-number">597</span>Her feet were skinny and split,<br></span>
-<span class="verse-line">and in many places were so wounded<br></span>
+<span class="verse-line">and in many places were deeply wounded<br></span>
 <span class="verse-line">for she did not protect them from thorns<br></span>
 <span class="verse-line">as she went through the wilderness.<br></span>
 <span class="verse-line">So it seemed to her, in her mind,<br></span>
@@ -567,36 +567,36 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">as her body is so chastised.<br></span>
 <span class="verse-line"><span class="line-number">607</span>It was no marvel that she was wooly;<br></span>
 <span class="verse-line">for forty years, she went totally nude.<br></span>
-<span class="verse-line">She had two breads of no great size.<br></span>
+<span class="verse-line">She had two loaves of no great size.<br></span>
 <span class="verse-line">On these, she lived for many years.<br></span>
 <span class="verse-line">The first year they became hard<br></span>
 <span class="verse-line"><span class="line-number">612</span>as though they were building stone.<br></span>
 <span class="verse-line">Every day, Mary ate some,<br></span>
 <span class="verse-line">but this was a very poor life.<br></span>
 <span class="verse-line">As soon as she had eaten up all her bread,<br></span>
-<span class="verse-line">then she went wild for the grasses nearby<br></span>
+<span class="verse-line">then she went wild for the grasses of the fields<br></span>
 <span class="verse-line"><span class="line-number">617</span>Like other beasts, she ate them.<br></span>
-<span class="verse-line">She provided herself with nothing else.<br></span>
-<span class="verse-line">She drank from the stream all the time.<br></span>
+<span class="verse-line">None of this bothered her.<br></span>
+<span class="verse-line">From then on, she drank from the stream.<br></span>
 <span class="verse-line">She had no other vessel.<br></span>
 <span class="verse-line">On grasses she lived and on roots<br></span> 
 <span class="verse-line"><span class="line-number">622</span>for eighteen years in the wilderness.<br></span>
 <span class="verse-line">Then for twenty years, she only ate<br></span>
 <span class="verse-line">what the angel of God brought to her.<br></span>
 <span class="verse-line">The devil came before her first.<br></span>
-<span class="verse-line">He used to annoy her so much<br></span>
+<span class="verse-line">He used to annoy her so much,<br></span>
 <span class="verse-line"><span class="line-number">627</span>making her remember<br></span>
 <span class="verse-line">whatever she once used to love,<br></span>
-<span class="verse-line">the beautiful delights and the beautiful games<br></span>
+<span class="verse-line">the fine delights and the fine games<br></span>
 <span class="verse-line">in which she used to take pleasure.<br></span>
 <span class="verse-line">She was so blissful<br></span>
-<span class="verse-line"><span class="line-number">632</span>that she had fogotten all of this.<br></span>
+<span class="verse-line"><span class="line-number">632</span>when she had forgotten all of this.<br></span>
 <span class="verse-line">Never again in her life<br></span>
-<span class="verse-line">did she bring to mind a day of folly.<br></span>
+<span class="verse-line">did she remember a day of folly.<br></span>
 <span class="verse-line">Mary goes through the wood.<br></span>
 <span class="verse-line">Never did she see a wild beast<br></span>
 <span class="verse-line"><span class="line-number">637</span>nor any living creature.<br></span>
-<span class="verse-line">Through the forest, she goes so secure.<br></span>
+<span class="verse-line">Through the forest, she goes in all security.<br></span>
 <span class="verse-line">In many places, she was sheltered.<br></span>
 <span class="verse-line">Her life was spiritual.<br></span>
 .....<br>
